    * added various improvements, including a better parser, bundles and better control over individual feeds.
- rewrote section code and renamed it to structure.module:
    * supports both "categories" and "topics" (cfr. Scoop, SlashCode).  Topics can be nested to create a multi-level hierarchy.
    * added "auto-post new submissions" feature versus "moderate new submissions".
- renamed hostname.conf to conf.php for security's sake.
- added poll.module.
- added conf.module:
    * moved most of the configuration options from hostname.conf to the new administration section.
    * added support for custom "filters".
- added moderate.module:
    * allows to assign users editorial/moderator rights to certain nodes or topics.
- added page.module:
    * allows creation of static (and dynamic) pages through the administration interface.
- added help.module:
    * groups all available module documentation on a single page.
- added forum.module:
    * added an integrated forum.
- added cvs.module and cvs-to-sql.pl:
    * allows to display and mail CVS log messages as daily digests.
- added book.module:
    * allows collaborative handbook writing: primary used for drupal documentation.
- removed cron.module and integrated it into conf.module.
- various updates:
    * introduced links/drupal tags: [[link]]
    * added preview functionality when submitting new content (such as a story) from the administration pages.
    * made the administration section only show those links a user has access to.
    * made all modules use specific form_* functions to guarantee a rock-solid forms and more consistent layout.
    * improved scheduler:
        + content can be scheduled to be 'posted', 'queued' and 'hidden'.
    * improved account module:
        + added "access control" to allow/deny certain usernames/e-mail addresses/hostnames.
    * improved comment module:
        + made it possible to permanently delete comments.
    * improved rating module
    * improved story module: